--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ajv-keywords": "^3.4.0",
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
+    "highcharts": "^7.1.1",
     "jquery": "^3.4.1",
     "js-md5": "^0.7.3",
     "moment": "^2.24.0",
